chrome/browser/ui/cocoa/draggable_button_mixin.mm
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <cmath>
 
 #include "base/logging.h"
+#include "ui/base/cocoa/cocoa_base_utils.h"
 
 // Code taken from <http://codereview.chromium.org/180036/diff/3001/3004>.
 // TODO(viettrungluu): Do we want common, standard code for drag hysteresis?
@@ -87,6 +88,15 @@ const CGFloat kDragExpirationTimeout = 0.45;
   whenMouseDown_ = [theEvent timestamp];
   actionHasFired_ = NO;
 
+  // Even if the regular click should trigger on mouse down (for example,
+  // opening the bookmark menu), command click should behave like a
+  // button click.
+  WindowOpenDisposition disposition =
+      ui::WindowOpenDispositionFromNSEvent(theEvent);
+  BOOL shouldActOnMouseDown =
+      actsOnMouseDown_ &&
+      disposition != WindowOpenDisposition::NEW_BACKGROUND_TAB;
+
   if (draggable_) {
     NSDate* date = [NSDate dateWithTimeIntervalSinceNow:kDragExpirationTimeout];
     if ([self dragShouldBeginFromMouseDown:theEvent
@@ -94,7 +104,7 @@ const CGFloat kDragExpirationTimeout = 0.45;
       [button_ beginDrag:theEvent];
       [self endDrag];
     } else {
-      if (actsOnMouseDown_) {
+      if (shouldActOnMouseDown) {
         [self performMouseDownAction:theEvent];
         return kDraggableButtonImplDidWork;
       } else {
@@ -102,7 +112,7 @@ const CGFloat kDragExpirationTimeout = 0.45;
       }
     }
   } else {
-    if (actsOnMouseDown_) {
+    if (shouldActOnMouseDown) {
       [self performMouseDownAction:theEvent];
       return kDraggableButtonImplDidWork;
     } else {
